# NeoTerm

./: README.md
NeoLang/: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/ukfs/: ukfs.cmake
app/src/main/cpp/ukfs/include/: uk_fs_api.h
app/src/main/cpp/ukfs/include/linux/: fcntl.h  fs.h  path.h  signal.h  socket.h  time.h  types.h  uio.h  vfs.h
app/src/main/cpp/ukfs/shim/fs/: block_sock.c  ext4_stubs.c  ntfs3_stubs.c  ukfsd.c  vfs.c
app/src/main/cpp/ukfs/test/: fs_redirect_test.c  fused_hello_test.c  run_host_tests.sh  run_proot_it.sh
app/src/main/java/com/github/wrdlbrnft/sortedlistadapter/: SortedListAdapter.kt
app/src/main/java/io/neoterm/backend/: TerminalEmulator.java
app/src/main/java/io/neoterm/component/completion/: comp.kt
app/src/main/java/io/neoterm/component/config/: comp.kt  defaults.kt
app/src/main/java/io/neoterm/component/session/: shell.kt
app/src/main/java/io/neoterm/services/: NeoTermService.kt
app/src/main/java/io/neoterm/setup/: setup.kt
app/src/main/java/io/neoterm/utils/: CameraBridge.kt  GpsBridge.kt  PulseAudioBridge.kt  SensorBridge.kt  UpdateManager.kt  UsbBridge.kt  UsbSysfsBridge.kt  X11Manager.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/layout/: tab_dots_action.xml  ui_about.xml  ui_main.xml  ui_setup.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: preference_keys.xml  strings.xml
app/src/main/res/xml/: file_paths.xml  setting_general.xml
(+43 files in other folders)
